# justopinion

./: .gitignore  .readthedocs.yaml  MANIFEST.in  README.rst  changelog.rst  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-package.yml
docs/: conf.py  index.rst
docs/api/: citations.rst  decisions.rst  download.rst
docs/guides/: downloading.rst  getting_started.rst
docs/history/: releases.rst
justopinion/: __init__.py  citations.py  decisions.py  download.py
tests/: test_citations.py  test_download.py  test_opinions.py
tests/cassettes/test_download/: TestCourtListenerClient.test_download_case_by_id.yaml  TestCourtListenerClient.test_download_case_by_string_id.yaml  TestCourtListenerClient.test_full_case_by_cite.yaml  TestCourtListenerClient.test_read_case_by_id.yaml  TestDecisions.test_download_case_from_cap_citation.yaml  TestDecisions.test_read_cited_decision.yaml  TestDownloads.test_download_case_by_id.yaml  TestDownloads.test_download_file.yaml  TestDownloads.test_error_bad_cap_id.yaml  TestDownloads.test_error_full_case_download_with_wrong_api_key.yaml  TestDownloads.test_fetch_full_decision_by_id.yaml  TestDownloads.test_full_case_by_cite.yaml  TestDownloads.test_read_case_from_citation.yaml  TestDownloads.test_read_case_list_from_eyecite_case_citation.yaml  TestDownloads.test_read_cited_case_from_id_using_client.yaml  TestDownloads.test_read_decision.yaml
