[metadata]
name = justopinion
version = 0.2.1
author = Matt Carey
author_email = matt@authorityspoke.com
description = Download client for legal opinions
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/mscarey/justopinion
project_urls =
    Bug Tracker = https://github.com/mscarey/justopinion/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    License :: Free To Use But Restricted
    Natural Language :: English
[options]
package_dir =
    = justopinion
packages = find:
python_requires = >=3.8

[options.packages.find]
where = justopinion

[flake8]
ignore = E501