[metadata]
name = justopinion
version = 0.2.3
author = Matt Carey
author_email = matt@authorityspoke.com
description = Download client for legal opinions
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/mscarey/justopinion
project_urls =
    Bug Tracker = https://github.com/mscarey/justopinion/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    License :: Free To Use But Restricted
    Natural Language :: English

[options]
install_requires =
    requests
    anchorpoint>=0.5.2
    eyecite>=2.2.0
    pydantic
packages = find:
python_requires = >=3.8

[options.packages.find]
where = justopinion

[pydocstyle]

add-ignore=D105,D202,D301

[flake8]
ignore = E121, E122, E124, E126, E128, E203, E302, E303, E501, E902, F821, W503
exclude =
    .git,
    __pycache__,
    docs/source/conf.py,
    build,
    dist,
    html,
    htmlcov,
    notebooks,
    prof,
max-complexity = 10

[mypy]
new_semantic_analyzer = True

[pylint]
ignore = E0239